create SVG, link up

--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -13,4 +13,4 @@ d3.svg.arc - display arcs
 d3.layout.pie - compute arc angles from data
 
 
-See also [Databases](../databases.md) | SVG | [CSS](../CSS/CSS.md)
+See also [Databases](../databases.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
