create 3D, formatting all

--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -1,6 +1,6 @@
-[Data Visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
+[data visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
 
-##D3.js
+##D3.js - Data-Driven Documents
 [D3.js, Ch 5 Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
 
@@ -14,4 +14,4 @@ d3.layout.pie - compute arc angles from data
 
 ----
 
-See also [Databases](../databases.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
+See also [databases](../databases.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
