--- a/3D.md
+++ b/3D.md
@@ -9,9 +9,7 @@
 * WebGL
 
 ####Glossary
-- vertex - each angular point of a polygon, polyhedron, or other figure.
+- Vertex - each angular point of a polygon, polyhedron, or other figure.
 - Euler values (radians) something about pi & rotation?
 - Fiducial - (especially of a point or line) assumed as a fixed basis of comparison.
 - MVP - Model View Projection
-
-See also
