--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -1,6 +1,26 @@
 [data visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
 
 ##D3.js - Data-Driven Documents
+
+[site](https://d3js.org/) | [documentation](https://github.com/d3/d3)
+
+in NPM `npm install d3`, or
+
+```HTML
+<script src="https://d3js.org/d3.v4.js"></script>
+```
+
+**Minified:**
+
+```HTML
+<script src="https://d3js.org/d3.v4.min.js"></script>
+```
+
+**centroid** - the center of mass of a geometric object of uniform density.
+
+<img src='https://upload.wikimedia.org/wikipedia/commons/5/5e/Triangle.Centroid.svg'/>
+In mathematics and physics, the centroid or geometric center of a plane figure is the arithmetic mean ("average") position of all the points in the shape. The definition extends to any object in n-dimensional space: its centroid is the mean position of all the points in all of the coordinate directions. Informally, it is the point at which an infinitesimally thin cutout of the shape could be perfectly balanced on the tip of a pin (assuming uniform density and a uniform gravitational field).
+
 [D3.js, Ch 5 Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
 
@@ -14,4 +34,4 @@ d3.layout.pie - compute arc angles from data
 
 ----
 
-See also [databases](../databases.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
+See also [databases](../databases.md) | canvas | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
