--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -4,6 +4,8 @@
 <a href="https://d3js.org"><img src="https://d3js.org/logo.svg" align="left"></a>
 [site](https://d3js.org/) | [documentation](https://github.com/d3/d3)
 
+---
+
 in NPM `npm install d3`, or
 
 ```HTML
@@ -28,13 +30,13 @@ In mathematics and physics, the centroid or geometric center of a plane figure i
 - [D3.js, Ch 5 Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 - [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
 
-d3.csv - load and parse data
+`d3.csv` - load and parse data
 
-d3.scale.ordinal - color encoding
+`d3.scale.ordinal` - color encoding
 
-d3.svg.arc - display arcs
+`d3.svg.arc` - display arcs
 
-d3.layout.pie - compute arc angles from data
+`d3.layout.pie` - compute arc angles from data
 
 ----
 
