--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -29,6 +29,7 @@ In mathematics and physics, the centroid or geometric center of a plane figure i
 
 - [D3.js, Ch 5 Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 - [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
+- [Dashing D3.js](https://www.dashingd3js.com) - Tutorial (big)
 
 `d3.csv` - load and parse data
 
