--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -1,6 +1,6 @@
 [data visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
 
-##D3.js - Data-Driven Documents
+## D3.js - Data-Driven Documents
 <a href="https://d3js.org"><img src="https://d3js.org/logo.svg" align="left"></a>
 [site](https://d3js.org/) | [documentation](https://github.com/d3/d3)
 
@@ -17,7 +17,7 @@ in NPM `npm install d3`, or
 ```HTML
 <script src="https://d3js.org/d3.v4.min.js"></script>
 ```
-###Glossary
+### Glossary
 
 **centroid** - the center of mass of a geometric object of uniform density.
 
@@ -25,9 +25,9 @@ in NPM `npm install d3`, or
 
 In mathematics and physics, the centroid or geometric center of a plane figure is the arithmetic mean ("average") position of all the points in the shape. The definition extends to any object in n-dimensional space: its centroid is the mean position of all the points in all of the coordinate directions. Informally, it is the point at which an infinitesimally thin cutout of the shape could be perfectly balanced on the tip of a pin (assuming uniform density and a uniform gravitational field).
 
-###Links
+### Links
 
-- [D3.js, Ch 5 Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
+- [D3.js, Chapter 5, Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 - [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
 - [Dashing D3.js](https://www.dashingd3js.com) - Tutorial (big)
 
