--- a/javascript/d3.md
+++ b/javascript/d3.md
@@ -1,10 +1,13 @@
 [data visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
 
 ## D3.js - Data-Driven Documents
-<a href="https://d3js.org"><img src="https://d3js.org/logo.svg" align="left"></a>
+
+<a href="https://d3js.org"><img src="https://d3js.org/logo.svg" ></a>
+
 [site](https://d3js.org/) | [documentation](https://github.com/d3/d3)
 
----
+
+
 
 in NPM `npm install d3`, or
 
