format art, move info from art to 3D

--- a/3D.md
+++ b/3D.md
@@ -8,6 +8,16 @@
 * Virtual Reality
 * WebGL
 
+
+### Rhinoceros (Mac & Windows)
+
+(typically abbreviated Rhino, or Rhino3D) is a commercial 3D computer graphics and computer-aided design (CAD) application software developed by Robert McNeel & Associates; an American, privately held, employee-owned company, that was founded in 1980. Rhinoceros geometry is based on the NURBS mathematical model, which focuses on producing mathematically precise representation of curves and freeform surfaces in computer graphics (as opposed to polygon mesh-based applications).
+
+### Grasshopper 3D
+is a visual programming language with works with the CAD application Rhino 3D. Grasshopper is primarily used to build generative algorithms, such as for generative art. Many of Grasshopper's components create 3D geometry. Programs may also contain other types of algorithms including numeric, textual, audio-visual and haptic applications.
+"Popular among students & professionals, McNeel Associate’s Rhino modelling tool is endemic in the architectural design world. The new Grasshopper environment provides an intuitive way to explore designs without having to learn to script."
+
+
 #### Glossary
 - Vertex - each angular point of a polygon, polyhedron, or other figure.
 - Euler values (radians) something about pi & rotation?
