--- a/notes/3D.md
+++ b/notes/3D.md
@@ -8,6 +8,15 @@
 * Virtual Reality
 * WebGL
 
+## ?
+- NURBS
+
+### Voxels
+([wikipedia](https://en.wikipedia.org/wiki/Voxel))
+
+(in computer-based modeling or graphic simulation) each of an array of elements of volume that constitute a notional three-dimensional space, especially each of an array of discrete elements into which a representation of a three-dimensional object is divided.
+
+A voxel represents a value on a regular grid in three-dimensional space. As with pixels in a bitmap, voxels themselves do not typically have their position (their coordinates) explicitly encoded along with their values. Instead, the position of a voxel is inferred based upon its position relative to other voxels (i.e., its position in the data structure that makes up a single volumetric image). In contrast to pixels and voxels, points and polygons are often explicitly represented by the coordinates of their vertices. A direct consequence of this difference is that polygons are able to efficiently represent simple 3D structures with lots of empty or homogeneously filled space, while voxels are good at representing regularly sampled spaces that are non-homogeneously filled.
 
 ### Rhinoceros (Mac & Windows)
 
