fix tables in math, 3D++ NURBS, tid++

--- a/notes/3D.md
+++ b/notes/3D.md
@@ -10,6 +10,8 @@
 
 ## ?
 - NURBS
+  - Non-uniform rational Basis spline (NURBS) is a mathematical model commonly used in computer graphics for generating and representing curves and surfaces. It offers great flexibility and precision for handling both analytic (surfaces defined by common mathematical formulae) and modeled shapes.
+
 
 ### Voxels
 ([wikipedia](https://en.wikipedia.org/wiki/Voxel))
