link math & 3D, create linux/network++ (SCP)

--- a/notes/3D.md
+++ b/notes/3D.md
@@ -1,4 +1,4 @@
-[notes](notes.md)
+[notes](notes.md) | [math](math.md)
 
 ## 3D
 * [Art](art.md)
@@ -8,29 +8,26 @@
 * Virtual Reality
 * WebGL
 
-## ?
-- NURBS
-  - Non-uniform rational Basis spline (NURBS) is a mathematical model commonly used in computer graphics for generating and representing curves and surfaces. It offers great flexibility and precision for handling both analytic (surfaces defined by common mathematical formulae) and modeled shapes.
-
 
 ### Voxels
-([wikipedia](https://en.wikipedia.org/wiki/Voxel))
-
 (in computer-based modeling or graphic simulation) each of an array of elements of volume that constitute a notional three-dimensional space, especially each of an array of discrete elements into which a representation of a three-dimensional object is divided.
 
 A voxel represents a value on a regular grid in three-dimensional space. As with pixels in a bitmap, voxels themselves do not typically have their position (their coordinates) explicitly encoded along with their values. Instead, the position of a voxel is inferred based upon its position relative to other voxels (i.e., its position in the data structure that makes up a single volumetric image). In contrast to pixels and voxels, points and polygons are often explicitly represented by the coordinates of their vertices. A direct consequence of this difference is that polygons are able to efficiently represent simple 3D structures with lots of empty or homogeneously filled space, while voxels are good at representing regularly sampled spaces that are non-homogeneously filled.
+([wikipedia](https://en.wikipedia.org/wiki/Voxel))
 
 ### Rhinoceros (Mac & Windows)
-
 (typically abbreviated Rhino, or Rhino3D) is a commercial 3D computer graphics and computer-aided design (CAD) application software developed by Robert McNeel & Associates; an American, privately held, employee-owned company, that was founded in 1980. Rhinoceros geometry is based on the NURBS mathematical model, which focuses on producing mathematically precise representation of curves and freeform surfaces in computer graphics (as opposed to polygon mesh-based applications).
 
 ### Grasshopper 3D
-is a visual programming language with works with the CAD application Rhino 3D. Grasshopper is primarily used to build generative algorithms, such as for generative art. Many of Grasshopper's components create 3D geometry. Programs may also contain other types of algorithms including numeric, textual, audio-visual and haptic applications.
+A visual programming language with works with the CAD application Rhino 3D. Grasshopper is primarily used to build generative algorithms, such as for generative art. Many of Grasshopper's components create 3D geometry. Programs may also contain other types of algorithms including numeric, textual, audio-visual and haptic applications.
 "Popular among students & professionals, McNeel Associate’s Rhino modelling tool is endemic in the architectural design world. The new Grasshopper environment provides an intuitive way to explore designs without having to learn to script."
 
+## ?
+- NURBS
+- Non-uniform rational Basis spline (NURBS) is a mathematical model commonly used in computer graphics for generating and representing curves and surfaces. It offers great flexibility and precision for handling both analytic (surfaces defined by common mathematical formulae) and modeled shapes.
 
 #### Glossary
-- Vertex - each angular point of a polygon, polyhedron, or other figure.
+- Vertex - each angular point of a polygon, polyhedron, or other figure. (plural vertices)
 - Euler values (radians) something about pi & rotation?
 - Fiducial - (especially of a point or line) assumed as a fixed basis of comparison.
 - MVP - Model View Projection
