RESTful renaming, linux/terminal reorganise

--- a/notes/javascript/d3.md
+++ b/notes/javascript/d3.md
@@ -1,4 +1,4 @@
-[data visualisation](dataVisualisation.md) | [JavaScript](javascript/notes.md)
+[data visualisation](dataVisualisation.md) | [JavaScript](index.md)
 
 ## D3.js - Data-Driven Documents
 
