fix links, npm++

--- a/notes/javascript/d3.md
+++ b/notes/javascript/d3.md
@@ -1,4 +1,4 @@
-[data visualisation](dataVisualisation.md) | [JavaScript](index.md)
+[data visualisation](../dataVisualisation.md) | [JavaScript](index.md)
 
 ## D3.js - Data-Driven Documents
 
@@ -8,8 +8,7 @@
 
 
 
-
-in NPM `npm install d3`, or
+in node.js projects do `npm install d3`, or
 
 ```HTML
 <script src="https://d3js.org/d3.v4.js"></script>
