create geometry++, new math dir, link up

--- a/notes/javascript/d3.md
+++ b/notes/javascript/d3.md
@@ -19,13 +19,7 @@ in node.js projects do `npm install d3`, or
 ```HTML
 <script src="https://d3js.org/d3.v4.min.js"></script>
 ```
-### Glossary
 
-**centroid** - the center of mass of a geometric object of uniform density.
-
-<img src='https://upload.wikimedia.org/wikipedia/commons/5/5e/Triangle.Centroid.svg'/>
-
-In mathematics and physics, the centroid or geometric center of a plane figure is the arithmetic mean ("average") position of all the points in the shape. The definition extends to any object in n-dimensional space: its centroid is the mean position of all the points in all of the coordinate directions. Informally, it is the point at which an infinitesimally thin cutout of the shape could be perfectly balanced on the tip of a pin (assuming uniform density and a uniform gravitational field).
 
 ### Links
 
@@ -43,4 +37,4 @@ In mathematics and physics, the centroid or geometric center of a plane figure i
 
 ----
 
-See also [databases](../databases.md) | canvas | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
+See also [databases](../databases.md) | canvas | [math](../math/index.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
