--- a/notes/javascript/d3.md
+++ b/notes/javascript/d3.md
@@ -37,4 +37,4 @@ in node.js projects do `npm install d3`, or
 
 ----
 
-See also [databases](../databases.md) | canvas | [math](../math/index.md) | [SVG](../HTML/SVG.md) | [CSS](../CSS/CSS.md)
+See also [CSS](../CSS/index.md) | [databases](../databases.md) | [canvas](../HTML/canvas.md) | [math](../math/index.md) | [SVG](../HTML/SVG.md)
