create cg, link up

--- a/notes/cg/3D.md
+++ b/notes/cg/3D.md
@@ -1,11 +1,11 @@
-[notes](index.md) | [math](math/index.md)
+[notes](../index.md) | [computer graphics](cg/index.md) | [math](../math/index.md)
 
 ## 3D
-* [Art](art.md)
-* [Data Visualisation](dataVisualisation.md)
-* [Three.js](javascript/threejs.md)
-* [User Interfaces](UI.md)
-* Virtual Reality
+* [art](../art.md)
+* [data visualisation](../dataVisualisation.md)
+* [Three.js](../javascript/threejs.md)
+* [user interfaces](../UI.md)
+* virtual reality
 * WebGL
 
 
