new linx, formats

--- a/notes/javascript/d3.md
+++ b/notes/javascript/d3.md
@@ -21,11 +21,12 @@ in node.js projects do `npm install d3`, or
 ```
 
 
-### Links
+### links
 
 - [D3.js, Chapter 5, Scales - Vienno](bit.ly/1QIhgnA) (YouTube Tutorial)
 - [Intro to D3 - Curren](http://bit.ly/1UM935i) (40 minutes in)
 - [Dashing D3.js](https://www.dashingd3js.com) - Tutorial (big)
+- [d3Vienno](https://www.youtube.com/user/d3Vienno/about) - YouTube channel
 
 `d3.csv` - load and parse data
 
