--- a/notes/cg/3D.md
+++ b/notes/cg/3D.md
@@ -1,4 +1,4 @@
-[notes](../index.md) | [computer graphics](cg/index.md) | [math](../math/index.md)
+[computer graphics](cg/index.md) | [math](../math/index.md)
 
 ## 3D
 * [art](../art.md)
